tests/unit-fail-compilation/j020c-link1.c.ref
j020c-link1.c:4:3: error: Trying to convert an incomplete lvalue not of array type.

    Undefined behavior (UB-CEE5):
        see C11 section 6.3.2.1:2 http://rvdoc.org/C11/6.3.2.1
        see C11 section J.2:1 item 20 http://rvdoc.org/C11/J.2
        see CERT-C section MSC15-C http://rvdoc.org/CERT-C/MSC15-C
        see MISRA-C section 8.1:3 http://rvdoc.org/MISRA-C/8.1

Translation failed (kcc_config dumped). To repeat, run this command in directory unit-fail-compilation:
kcc -d -Werror -Wfatal-errors j020c-link1.c j020c-link2.c
