tests/unit-fail-compilation/j020c-link1.c
extern struct foo x;

int main() {
  x;
  return 0;
}
